# private-clinick

./: pyproject.toml
src/core/: config.py
src/models/: base.py  mixins.py  staff.py  users.py
